feat(archives&ressources) Ajout routes archives, show favoris, ajout filtres
